# trax_act_controller

./: .pylintrc  CHANGELOG.md  PUBLISHING.md  README.md  licence.md  pyproject.toml  trax_testing.py
.github/workflows/: Manual_Trigger.yaml  On_Pull_Request.yaml  On_Push.yaml  Run_Tests.yaml  manual_trigger.yaml  on_pull_request.yaml  on_push.yaml  publish.yaml  run_tests.yaml
src/: act.py
src/trax_act_controller/: __init__.py  act.py
tests/: test_buffers.py  test_channels.py  test_constructor.py  test_usage.py
