[tool.poetry]
name = "trax_act"  # Replace with your package name
version = "0.1.0"  # Update as needed
description = "An ACT (Adaptive Computation Time) controller with extensive error handling for trax."  # Provide a concise package description
authors = ["Chris O'Quinn <chrisoquinn.2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
trax = "*"

[tool.poetry.dev-dependencies]

python = ">=3.8, <3.12"
trax = "*"
numpy = "*"
pytest = ">=5.2"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"