[tool.poetry]
name = "trax_act_controller" # This and the src package must have the same name
version = "0.1.1"
description = "An ACT (Adaptive Computation Time) controller with extensive error handling for trax."  # Provide a concise package description
authors = ["Chris O'Quinn <chrisoquinn.2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
trax = "*"

[tool.poetry.dev-dependencies]
tensorflow = ">=2.14"
python = ">=3.9"
trax = "*"
numpy = "*"
pytest = ">=5.2"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api